# MemoryBooster

./: .gitignore  MemoryBooster.sln  README.md
MemoryBooster/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MemoryBooster.csproj  app.manifest
MemoryBooster/Converters/: ValueConverters.cs
MemoryBooster/Models/: AppSettings.cs  ProcessInfo.cs
MemoryBooster/Services/: MemoryService.cs  NativeInterop.cs  NetworkMonitor.cs  NetworkProcessMonitor.cs  StartupManager.cs
MemoryBooster/Views/: BoosterPanel.xaml  BoosterPanel.xaml.cs  ExitConfirmDialog.xaml  ExitConfirmDialog.xaml.cs  MultiKillConfirmDialog.xaml  MultiKillConfirmDialog.xaml.cs  ToolTipPopup.xaml  ToolTipPopup.xaml.cs
MemoryCore/: CMakeLists.txt  MemoryCore.cpp  MemoryCore.h
